--- a/WebAppTemplate/Views/Shared/_AdminLayout.cshtml
+++ b/WebAppTemplate/Views/Shared/_AdminLayout.cshtml
@@ -18,12 +18,10 @@
             </button>
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
-                    @* name/method/controller name *@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("User Layout", "Index", "MyAccount", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Admin Layout", "Index", "Admin", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Hours", "Index", "Hours", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Contact Us", "index", "ContactUs", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Admin Home", "Index", "Admin", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Manage Pets", "Pets", "Admin", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Bookings", "Bookings", "Admin", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
                  @Html.Partial("_LoginPartial")
             </div>
