--- a/PinePawRetreat/Views/Pets/index.cshtml
+++ b/PinePawRetreat/Views/Pets/index.cshtml
@@ -8,14 +8,18 @@
 
 <body class="bg-light">
     <h2 class="text-center">Manage Pets</h2>
-    @{ 
-        foreach(var pet in Model)
+    <p>Pets count: @Model.Count()</p>
+    @{
+        if (Model.Count > 0)
         {
-            Html.Partial("_PetCard", pet);
+            foreach (var pet in Model)
+            {
+                Html.RenderPartial("_PetCard", pet);
+            }
         }
     }
 
-   
+
 </body>
 </html>
 
