--- a/PinePawRetreat/Views/Pets/_PetCard.cshtml
+++ b/PinePawRetreat/Views/Pets/_PetCard.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "_PetCard";
 }
 
-<div class="card w-75 mx-auto mb-3">
+<div class="card mb-3">
     <div class="card-body">
         <div class="fw-bold fs-5 mb-1">@Model.Name</div>
 
