--- a/PinePawRetreat/Views/Pets/index.cshtml
+++ b/PinePawRetreat/Views/Pets/index.cshtml
@@ -7,19 +7,23 @@
 <html lang="en">
 
 <body class="bg-light">
-    <h2 class="text-center">Manage Pets</h2>
-    <p>Pets count: @Model.Count()</p>
-    @{
-        if (Model.Count > 0)
+    <div class="w-75 mx-auto">
+
+        <div class="d-flex align-items-center mb-4">
+            <div class="flex-grow-1"></div>
+
+            <h1 class="mb-0 text-center">Manage Pets</h1>
+
+            <div class="flex-grow-1 d-flex justify-content-end">
+                @Html.ActionLink("+ Add Pet","AddPet","Pets",null,new { @class = "btn btn-success btn-sm" })
+            </div>
+        </div>
+
+        @foreach (var pet in Model)
         {
-            foreach (var pet in Model)
-            {
-                Html.RenderPartial("_PetCard", pet);
-            }
+            @Html.Partial("_PetCard", pet)
         }
-    }
-
-
+    </div>
 </body>
 </html>
 
